--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.6.0)
 Imports: 
+    devtools,
     httr, 
-    quantstrat,
-    xts
+    xts,
+    FinancialInstrument,
+    PerformanceAnalytics
 RoxygenNote: 7.0.2
